--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- Validação -->
         <dependency>
             <groupId>org.hibernate.validator</groupId>
