--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@
             <version>2.2.0</version>
         </dependency>
 
+        <!-- Spring Boot Actuator para health checks -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <!-- Testes -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
