--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,7 +4,7 @@ server.port=${PORT:8080}
 # H2 Database para produção (arquivo persistente)
 spring.h2.console.enabled=false
 spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:file:./data/db
+spring.datasource.url=jdbc:h2:file:./data/db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=${DB_PASSWORD:password}
@@ -14,11 +14,15 @@ spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=false
 
-# Logging
-logging.level.org.springframework.web=INFO
+# Logging otimizado para produção
+logging.level.org.springframework.web=WARN
 logging.level.com.agendasim=INFO
 logging.level.org.hibernate.SQL=WARN
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
 # Segurança JWT
 jwt.secret=${JWT_SECRET:chave-secreta-super-forte-e-segura-para-o-token-jwt-123456789012345}
@@ -32,3 +36,10 @@ springdoc.swagger-ui.enabled=false
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
 management.health.defaults.enabled=true
+management.health.diskspace.enabled=true
+
+# Configurações de performance
+server.tomcat.threads.max=200
+server.tomcat.threads.min-spare=10
+server.tomcat.max-connections=8192
+server.tomcat.accept-count=100
