--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,10 @@
 services:
   - type: web
     name: agendasim-api
-    env: docker
+    env: node
     plan: free
-    dockerfilePath: ./Dockerfile
+    buildCommand: npm run build
+    startCommand: npm start
     envVars:
       - key: SPRING_PROFILES_ACTIVE
         value: prod
