ddl-auto=create

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,7 +10,7 @@ spring.datasource.username=sa
 spring.datasource.password=${DB_PASSWORD:password}
 
 # JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.mode=always
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=false
