postgress prod render

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,32 +1,48 @@
-# Configurações para produção no Render
+# ============================================
+# AMBIENTE DE PRODUÇÃO - POSTGRESQL NO RENDER
+# ============================================
+
+# Server Configuration
 server.port=${PORT:8080}
 
-# H2 Database para produção (arquivo persistente)
-spring.h2.console.enabled=false
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:file:./data/db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=${DB_PASSWORD:password}
+# PostgreSQL Configuration
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# JPA/Hibernate
+# JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.properties.hibernate.use_sql_comments=false
+spring.sql.init.continue-on-error=false
+spring.jpa.defer-datasource-initialization=true
 
-# Logging otimizado para produção
-logging.level.org.springframework.web=WARN
+# PostgreSQL específico
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.open-in-view=false
+
+# Connection Pool (HikariCP)
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1200000
+
+# Logging para produção
 logging.level.com.agendasim=INFO
 logging.level.org.hibernate.SQL=WARN
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.level.org.springframework.security=WARN
+logging.level.root=INFO
 
-# Segurança JWT
-jwt.secret=${JWT_SECRET:chave-secreta-super-forte-e-segura-para-o-token-jwt-123456789012345}
-jwt.expiration=${JWT_EXPIRATION:86400000}
+# JWT Configuration
+jwt.secret=${JWT_SECRET:minha-chave-secreta-super-forte-para-producao-67890}
+jwt.expiration=86400000
+
+# CORS Configuration
+cors.allowed-origins=http://localhost:3000,https://agendasim.netlify.app
+
+# Encoding
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
 
 # Swagger (desabilitado em produção)
 springdoc.api-docs.enabled=false
@@ -35,11 +51,6 @@ springdoc.swagger-ui.enabled=false
 # Actuator para health checks
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
-management.health.defaults.enabled=true
-management.health.diskspace.enabled=true
 
-# Configurações de performance
-server.tomcat.threads.max=200
-server.tomcat.threads.min-spare=10
-server.tomcat.max-connections=8192
-server.tomcat.accept-count=100
+# Desabilitar H2
+spring.h2.console.enabled=false
