AMBIENTE DE PRODUÇÃO - POSTGRESQL NO RENDER

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,51 +6,30 @@
 server.port=${PORT:8080}
 
 # PostgreSQL Configuration
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
-spring.sql.init.continue-on-error=false
 spring.jpa.defer-datasource-initialization=true
-
-# PostgreSQL específico
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.open-in-view=false
 
 # Connection Pool (HikariCP)
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.idle-timeout=300000
-spring.datasource.hikari.max-lifetime=1200000
-
-# Logging para produção
-logging.level.com.agendasim=INFO
-logging.level.org.hibernate.SQL=WARN
-logging.level.org.springframework.security=WARN
-logging.level.root=INFO
 
 # JWT Configuration
-jwt.secret=${JWT_SECRET:minha-chave-secreta-super-forte-para-producao-67890}
+jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
-
-# CORS Configuration
-cors.allowed-origins=http://localhost:3000,https://agendasim.netlify.app
-
-# Encoding
-spring.http.encoding.charset=UTF-8
-spring.http.encoding.enabled=true
-
-# Swagger (desabilitado em produção)
-springdoc.api-docs.enabled=false
-springdoc.swagger-ui.enabled=false
 
 # Actuator para health checks
 management.endpoints.web.exposure.include=health,info
-management.endpoint.health.show-details=when-authorized
 
-# Desabilitar H2
+# Desabilitar recursos desnecessários
 spring.h2.console.enabled=false
+springdoc.api-docs.enabled=false
+springdoc.swagger-ui.enabled=false
