--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -21,3 +21,7 @@ spring.h2.console.path=/h2-console
 # Desabilitar segurança para testes
 spring.security.user.name=test
 spring.security.user.password=test
+
+# Jackson configuration for Java Time
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.deserialization.fail-on-unknown-properties=false
