--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
-# Arquivos de ajuda
 HELP.md
-
-# Build outputs
 target/
-**/target/
-
-# Maven wrapper
 !.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
 
 ### STS ###
 .apt_generated
@@ -36,18 +32,28 @@ build/
 ### VS Code ###
 .vscode/
 
-### H2 Database ###
-data/
-*.db
-*.trace.db
-*.lock.db
-
-### Logs ###
-*.log
-logs/
-
-### Environment variables ###
+### Environment Files ###
 .env
 .env.local
 .env.production
-/.apt_generated_tests/
+.env.staging
+
+### Database ###
+data/
+*.db
+*.sqlite
+
+### Logs ###
+logs/
+*.log
+
+### OS ###
+.DS_Store
+Thumbs.db
+
+### Docker ###
+.dockerignore
+
+### Coverage ###
+jacoco.exec
+target/site/jacoco/
