--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,13 +1,16 @@
 # ============================================
-# AMBIENTE DE PRODUÇÃO - POSTGRESQL NO RENDER
+# AMBIENTE DE PRODUÇÃO - VPS HOSTINGER
 # ============================================
 
 # Server Configuration
 server.port=${PORT:8080}
+server.servlet.context-path=/api
+server.compression.enabled=true
+server.http2.enabled=true
 
 # PostgreSQL Configuration
 spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
@@ -17,19 +20,59 @@ spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.open-in-view=false
+spring.jpa.show-sql=false
 
-# Connection Pool (HikariCP)
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=2
+# Database Platform
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Connection Pool (HikariCP) - Otimizado para VPS
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1200000
+spring.datasource.hikari.leak-detection-threshold=60000
+
+# Performance & Security
+spring.jpa.properties.hibernate.jdbc.batch_size=25
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 
 # JWT Configuration
 jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
 
-# Actuator para health checks
-management.endpoints.web.exposure.include=health,info
+# CORS Configuration - Ajuste conforme seu frontend
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:https://seu-frontend.netlify.app}
 
-# Desabilitar recursos desnecessários
+# Actuator para health checks
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=when-authorized
+management.metrics.export.prometheus.enabled=true
+
+# Logging Configuration
+logging.level.root=${LOGGING_LEVEL_ROOT:INFO}
+logging.level.com.agendasim=${LOGGING_LEVEL_COM_AGENDASIM:INFO}
+logging.level.org.springframework.security=WARN
+logging.level.org.hibernate.SQL=WARN
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %level - %logger{36} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# Desabilitar recursos desnecessários em produção
 spring.h2.console.enabled=false
 springdoc.api-docs.enabled=false
 springdoc.swagger-ui.enabled=false
+
+# Encoding
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+
+# Cache Configuration
+spring.jpa.properties.hibernate.cache.use_second_level_cache=false
+spring.jpa.properties.hibernate.cache.use_query_cache=false
+
+# Security Headers
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.same-site=strict
