--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -44,7 +44,7 @@ jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
 
 # CORS Configuration - Ajuste conforme seu frontend
-cors.allowed-origins=${CORS_ALLOWED_ORIGINS:https://seu-frontend.netlify.app}
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:https://agendesim.com}
 
 # Actuator para health checks
 management.endpoints.web.exposure.include=health,info,metrics
